--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
         <p>
           Being with you makes me want to become the best version of myself because
-          someone as amazing as you deserves that. You inspire me every single dat just
+          someone as amazing as you deserves that. You inspire me every single day just
           by being who you are, and I adore you more than words could ever say.
         </p>
 
