--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
       <!-- !! REPLACE src WITH YOUR GIF PATH !! -->
       <div class="inline-gif">
-        <img src="peachgoma.gif" alt="Our memory" />
+        <img src="sunset.gif" alt="Our memory" />
       </div>
     </div>
 
@@ -413,7 +413,7 @@
 <!-- Footer -->
 <div class="footer">
   <span class="footer-heart">♥</span>
-  <p>Happy 1st Anniversary</p>
+  <p>Marithan Forever!</p>
 </div>
 
 <!-- ════════════════════════════════════════════
